--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -1,190 +1,187 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-   <title>La palette du goût</title>
-   <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+    <title>La palette du goût</title>
+    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
 </head>
-    <body>
-        <header>
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<body>
+    <header>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <div>
+            <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
+        </div>
+    </header>
+    <nav>
+        <section>
             <div>
-                <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
+                <img class="imagedefond" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="jay-wennington-N_Y88TWmGwA-unsplash">
             </div>
-        </header>
-        <nav>
-            <section>
+        </section>
+        <div class="supercadre"></div>
+    </nav>
+    <main>
+        <section class="cadre">
+            <h1 class="lapalettedegout">La palette du goût</h1>
+            <i class="icone fa-sharp fa-solid fa-heart"></i>
+            <div>
+                <h2 class="titre">ENTRÉE</h2>
                 <div>
-                    <img class="imagedefond" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash">
-                </div>
-            </section>
-            <div class="supercadre"></div>
-        </nav>
-        <main>
-            <section class="cadre">
-                <h1 class="lapalettedegout">La palette du goût</h1>
-                    <i class="icone fa-sharp fa-solid fa-heart"></i>
-                <div>
-                    <h2 class="titre">ENTRÉE</h2>
-                    <div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
+                        </article>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
                                 </empan>
-                            </div>
                         </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Foie gras de canard mi-cuit</h3>
+                            <p class="soustitre">Et ses copeaux de truffe noire</p>
+                        </article>
+                        <span>35€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
                                 </empan>
-                            </div>
                         </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Œuf au plat</h3>
+                            <p class="soustitre">Assésonné à la truffe sur lit de caviar</p>
+                        </article>
+                        <span>20€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
                                 </empan>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <h2 class="titre">PLATS</h2>
-                <div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
-                        </article>
-                        <span>25€</span>
-                        <div class="carte__plats__infos__checkbox">
-                            <input type="checkbox » name="plat-entrées"
-                                value="Tartare de poulpe acidulé" />
-                            <span class="checkbox_icon">
-                                <i class="fa-solid fa-circle-check"></i>
-                            </empan>
-                        </div>
-                    </div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
-                        </article>
-                        <span>25€</span>
-                        <div class="carte__plats__infos__checkbox">
-                            <input type="checkbox » name="plat-entrées"
-                                value="Tartare de poulpe acidulé" />
-                            <span class="checkbox_icon">
-                                <i class="fa-solid fa-circle-check"></i>
-                            </empan>
-                        </div>
-                    </div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
-                        </article>
-                        <span>25€</span>
-                        <div class="carte__plats__infos__checkbox">
-                            <input type="checkbox » name="plat-entrées"
-                                value="Tartare de poulpe acidulé" />
-                            <span class="checkbox_icon">
-                                <i class="fa-solid fa-circle-check"></i>
-                            </empan>
-                        </div>
-                    </div>
-                </div>
-                <h2 class="titre">DESSERTS</h2>
-                <div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
-                        </article>
-                        <span>25€</span>
-                        <div class="carte__plats__infos__checkbox">
-                            <input type="checkbox » name="plat-entrées"
-                                value="Tartare de poulpe acidulé" />
-                            <span class="checkbox_icon">
-                                <i class="fa-solid fa-circle-check"></i>
-                            </empan>
-                        </div>
-                    </div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
-                        </article>
-                        <span>25€</span>
-                        <div class="carte__plats__infos__checkbox">
-                            <input type="checkbox » name="plat-entrées"
-                                value="Tartare de poulpe acidulé" />
-                            <span class="checkbox_icon">
-                                <i class="fa-solid fa-circle-check"></i>
-                            </empan>
-                        </div>
-                    </div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
-                        </article>
-                        <span>25€</span>
-                        <div class="carte__plats__infos__checkbox">
-                            <input type="checkbox » name="plat-entrées"
-                                value="Tartare de poulpe acidulé" />
-                            <span class="checkbox_icon">
-                                <i class="fa-solid fa-circle-check"></i>
-                            </empan>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <a class="bouton textinbutton">Commander</a>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div class="orderfooter">
-                <div class="footerline">
-                    <i class="iconefooter fa-solid fa-utensils"></i>
-                    <p>Proposer un restaurant</p>
-                </div>
-                <div class="footerline">
-                    <i class="iconefooter fa-solid fa-handshake-angle"></i>
-                    <p>Devenir partenaire</p>
-                </div>
-                <div class="footerline">
-                    <p>Mentions légales</p>
-                </div>
-                <div class="footerline">
-                    <p>Contact</p>
-                </div>
-                <div class="footerline">
-                    <h3 class="omf">ohmyfood</h3>
                 </div>
             </div>
-        </footer>
-    </body>
+            <h2 class="titre">PLATS</h2>
+            <div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Filet de Bœuf aux herbes</h3>
+                        <p class="soustitre">Accompagné de sa ribambelle de légumes</p>
+                    </article>
+                    <span>40€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Parmentier de queue de Bœuf</h3>
+                        <p class="soustitre">À la truffe noire sur sa purée de panais</p>
+                    </article>
+                    <span>35€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Filet de turbot</h3>
+                        <p class="soustitre">Aux agrumes</p>
+                    </article>
+                    <span>44€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+            </div>
+            <h2 class="titre">DESSERTS</h2>
+            <div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Paris-Brest</h3>
+                        <p class="soustitre">Revisité</p>
+                    </article>
+                    <span>18€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Macaron au chocolat d'exception</h3>
+                        <p class="soustitre">Et glace à la vanille de Madagascar</p>
+                    </article>
+                    <span>22€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Mousse au chocolat</h3>
+                        <p class="soustitre">Au piment d'Espelette et à la truffe noire</p>
+                    </article>
+                    <span>25€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <a class="bouton textinbutton">Commander</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="orderfooter">
+            <div class="footerline">
+                <i class="iconefooter fa-solid fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerline">
+                <i class="iconefooter fa-solid fa-handshake-angle"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <div class="footerline">
+                <p>Mentions légales</p>
+            </div>
+            <div class="footerline">
+                <p>Contact</p>
+            </div>
+            <div class="footerline">
+                <h3 class="omf">ohmyfood</h3>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
