--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -28,8 +28,8 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Tartare de thon</h3>
+                                <p class="soustitre">Assaisonné au yuzu</p>
                             </article>
                             <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
@@ -42,10 +42,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Bouchée de homard croustillant</h3>
+                                <p class="soustitre">Et sa farandole de petits légumes</p>
                             </article>
-                            <span>25€</span>
+                            <span>35€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -56,10 +56,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
+                                <p class="soustitre">Et sa crème de truffe</p>
                             </article>
-                            <span>25€</span>
+                            <span>40€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -74,10 +74,10 @@
                 <div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
+                            <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
+                            <p class="soustitre">Et sa crème de truffe</p>
                         </article>
-                        <span>25€</span>
+                        <span>40€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -88,10 +88,10 @@
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
+                            <h3 class="titremenu">Langouste rôtie</h3>
+                            <p class="soustitre">Et ses légumes de saisons</p>
                         </article>
-                        <span>25€</span>
+                        <span>35€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -102,10 +102,10 @@
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
+                            <h3 class="titremenu">Côte de bœuf Angus</h3>
+                            <p class="soustitre">Et sa purée de panais</p>
                         </article>
-                        <span>25€</span>
+                        <span>44€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -120,10 +120,10 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Œuf au plat</h3>
+                                <p class="soustitre">Assaisonné à la truffe sur lit de caviar</p>
                             </article>
-                            <span>25€</span>
+                            <span>76€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -134,10 +134,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Crème brulée</h3>
+                                <p class="soustitre">Revisitée</p>
                             </article>
-                            <span>25€</span>
+                            <span>22€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -148,10 +148,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Tiramisu</h3>
+                                <p class="soustitre">À la noisette</p>
                             </article>
-                            <span>25€</span>
+                            <span>23€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
