--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -22,16 +22,20 @@
         <main>
             <section class="cadre">
                 <h1 class="lapalettedegout">La note enchantée</h1>
-                    <i class="icone fa-sharp fa-solid fa-heart"></i>
+                <div class="article__infos__jaime">
+                    <input type="checkbox" name="jaime" value="J'aime" />
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
                 <div>
                     <h2 class="titre">ENTRÉE</h2>
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Ravioles de foi gras</h3>
+                                <p class="soustitre">Accompagnées de leur crème à la truffe</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -42,10 +46,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Caviar osciètre</h3>
+                                <p class="soustitre">Sur blini à la farine de blé noir</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">35€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -56,10 +60,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Homard et espuma de portion</h3>
+                                <p class="soustitre">Marinés aux zestes d'orange</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">20€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -70,10 +74,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Foie gras de canard cuit entier</h3>
+                                <p class="soustitre">Confiture de figue et pain toasté</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">35€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -88,10 +92,10 @@
                 <div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
+                            <h3 class="titremenu">Noix de coquilles Saint-Jacques</h3>
+                            <p class="soustitre">Sur lit de purée de céleri-rave</p>
                         </article>
-                        <span>25€</span>
+                        <span class="prix">40€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -102,10 +106,10 @@
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
-                            <p class="soustitre">Au piment d'Espelette</p>
+                            <h3 class="titremenu">Langoustine poêlée</h3>
+                            <p class="soustitre">Purée de patate douce</p>
                         </article>
-                        <span>25€</span>
+                        <span class="prix">35€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -116,10 +120,10 @@
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <h3 class="titremenu">Mijoté de queue de bœuf</h3>
                             <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <span>25€</span>
+                        <span class="prix">45€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -134,10 +138,10 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Macaron noisette et chocolat</h3>
+                                <p class="soustitre">Glace au caramel brun et sel de Guérande</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">18€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -148,10 +152,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Baba au rhum revisité</h3>
+                                <p class="soustitre">Avec son coulis de citron</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">22€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -162,10 +166,10 @@
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
+                                <h3 class="titremenu">Tarte au citron meringuée</h3>
+                                <p class="soustitre">Déstructurée</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">23€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
