--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -27,7 +27,11 @@
     <main>
         <section class="cadre">
             <h1 class="lapalettedegout">La palette du goût</h1>
-            <i class="icone fa-sharp fa-solid fa-heart"></i>
+            <div class="article__infos__jaime">
+                <input type="checkbox" name="jaime" value="J'aime" />
+                <i class="fa-solid fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+            </div>
             <div>
                 <h2 class="titre">ENTRÉE</h2>
                 <div>
@@ -36,7 +40,7 @@
                             <h3 class="titremenu">Fricassée d'escargots</h3>
                             <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <span>25€</span>
+                        <span class="prix">25€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                             <span class="checkbox_icon">
@@ -49,7 +53,7 @@
                             <h3 class="titremenu">Foie gras de canard mi-cuit</h3>
                             <p class="soustitre">Et ses copeaux de truffe noire</p>
                         </article>
-                        <span>35€</span>
+                        <span class="prix">35€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                             <span class="checkbox_icon">
@@ -62,7 +66,7 @@
                             <h3 class="titremenu">Œuf au plat</h3>
                             <p class="soustitre">Assésonné à la truffe sur lit de caviar</p>
                         </article>
-                        <span>20€</span>
+                        <span class="prix">20€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                             <span class="checkbox_icon">
@@ -79,7 +83,7 @@
                         <h3 class="titremenu">Filet de Bœuf aux herbes</h3>
                         <p class="soustitre">Accompagné de sa ribambelle de légumes</p>
                     </article>
-                    <span>40€</span>
+                    <span class="prix">40€</span>
                     <div class="carte__plats__infos__checkbox">
                         <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                         <span class="checkbox_icon">
@@ -92,7 +96,7 @@
                         <h3 class="titremenu">Parmentier de queue de Bœuf</h3>
                         <p class="soustitre">À la truffe noire sur sa purée de panais</p>
                     </article>
-                    <span>35€</span>
+                    <span class="prix">35€</span>
                     <div class="carte__plats__infos__checkbox">
                         <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                         <span class="checkbox_icon">
@@ -105,7 +109,7 @@
                         <h3 class="titremenu">Filet de turbot</h3>
                         <p class="soustitre">Aux agrumes</p>
                     </article>
-                    <span>44€</span>
+                    <span class="prix">44€</span>
                     <div class="carte__plats__infos__checkbox">
                         <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                         <span class="checkbox_icon">
@@ -121,7 +125,7 @@
                         <h3 class="titremenu">Paris-Brest</h3>
                         <p class="soustitre">Revisité</p>
                     </article>
-                    <span>18€</span>
+                    <span class="prix">18€</span>
                     <div class="carte__plats__infos__checkbox">
                         <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                         <span class="checkbox_icon">
@@ -134,7 +138,7 @@
                         <h3 class="titremenu">Macaron au chocolat d'exception</h3>
                         <p class="soustitre">Et glace à la vanille de Madagascar</p>
                     </article>
-                    <span>22€</span>
+                    <span class="prix">22€</span>
                     <div class="carte__plats__infos__checkbox">
                         <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                         <span class="checkbox_icon">
@@ -147,7 +151,7 @@
                         <h3 class="titremenu">Mousse au chocolat</h3>
                         <p class="soustitre">Au piment d'Espelette et à la truffe noire</p>
                     </article>
-                    <span>25€</span>
+                    <span class="prix">25€</span>
                     <div class="carte__plats__infos__checkbox">
                         <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
                         <span class="checkbox_icon">
