--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -22,7 +22,11 @@
         <main>
             <section class="cadre">
                 <h1 class="lapalettedegout">Le délice des sens</h1>
-                    <i class="icone fa-sharp fa-solid fa-heart"></i>
+                <div class="article__infos__jaime">
+                    <input type="checkbox" name="jaime" value="J'aime" />
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
                 <div>
                     <h2 class="titre">ENTRÉE</h2>
                     <div>
@@ -31,7 +35,7 @@
                                 <h3 class="titremenu">Tartare de thon</h3>
                                 <p class="soustitre">Assaisonné au yuzu</p>
                             </article>
-                            <span>25€</span>
+                            <span class="prix">25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -45,7 +49,7 @@
                                 <h3 class="titremenu">Bouchée de homard croustillant</h3>
                                 <p class="soustitre">Et sa farandole de petits légumes</p>
                             </article>
-                            <span>35€</span>
+                            <span class="prix">35€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -59,7 +63,7 @@
                                 <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
                                 <p class="soustitre">Et sa crème de truffe</p>
                             </article>
-                            <span>40€</span>
+                            <span class="prix">40€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -77,7 +81,7 @@
                             <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
                             <p class="soustitre">Et sa crème de truffe</p>
                         </article>
-                        <span>40€</span>
+                        <span class="prix">40€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -91,7 +95,7 @@
                             <h3 class="titremenu">Langouste rôtie</h3>
                             <p class="soustitre">Et ses légumes de saisons</p>
                         </article>
-                        <span>35€</span>
+                        <span class="prix">35€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -105,7 +109,7 @@
                             <h3 class="titremenu">Côte de bœuf Angus</h3>
                             <p class="soustitre">Et sa purée de panais</p>
                         </article>
-                        <span>44€</span>
+                        <span class="prix">44€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
@@ -123,7 +127,7 @@
                                 <h3 class="titremenu">Œuf au plat</h3>
                                 <p class="soustitre">Assaisonné à la truffe sur lit de caviar</p>
                             </article>
-                            <span>76€</span>
+                            <span class="prix">76€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -137,7 +141,7 @@
                                 <h3 class="titremenu">Crème brulée</h3>
                                 <p class="soustitre">Revisitée</p>
                             </article>
-                            <span>22€</span>
+                            <span class="prix">22€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
@@ -151,7 +155,7 @@
                                 <h3 class="titremenu">Tiramisu</h3>
                                 <p class="soustitre">À la noisette</p>
                             </article>
-                            <span>23€</span>
+                            <span class="prix">23€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
