--- a/restaurants/alafrançaise.html
+++ b/restaurants/alafrançaise.html
@@ -1,195 +1,196 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-   <title>La palette du goût</title>
-   <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+    <title>La palette du goût</title>
+    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
 </head>
-    <body>
-        <header>
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<body>
+    <header>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <div>
+            <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
+        </div>
+    </header>
+    <nav>
+        <section>
             <div>
-                <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
+                <img class="imagedefond" src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt="toa-heftiba-DQKerTsQwi0-unsplash">
             </div>
-        </header>
-        <nav>
-            <section>
+        </section>
+        <div class="supercadre"></div>
+    </nav>
+    <main>
+        <section class="cadre">
+            <h1 class="lapalettedegout">À la française</h1>
+            <div class="article__infos__jaime">
+                <input type="checkbox" name="jaime" value="J'aime" />
+                <i class="fa-solid fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div>
+                <h2 class="titre">ENTRÉE</h2>
                 <div>
-                    <img class="imagedefond" src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash">
-                </div>
-            </section>
-            <div class="supercadre"></div>
-        </nav>
-        <main>
-            <section class="cadre">
-                <h1 class="lapalettedegout">À la française</h1>
-                    <i class="icone fa-sharp fa-solid fa-heart"></i>
-                <div>
-                    <h2 class="titre">ENTRÉE</h2>
-                    <div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Tartare de poulpe acidulé</h3>
+                            <p class="soustitre">Aux zestes d'orange</p>
+                        </article>
+                        <span class="prix">25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
                                 </empan>
-                            </div>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </empan>
-                            </div>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </empan>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <div>
-                    <h2 class="titre">PLATS</h2>
-                    <div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Velouté de légumes d'antan</h3>
+                            <p class="soustitre">Carotte, panais, toinambour</p>
+                        </article>
+                        <span class="prix">35€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
                                 </empan>
-                            </div>
-                        </div>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </empan>
-                            </div>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </empan>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <h2 class="titre">DESSERTS</h2>
-                <div>
-                    <div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Soupe à l'oignon</h3>
+                            <p class="soustitre">Revisitée</p>
+                        </article>
+                        <span class="prix">20€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
                                 </empan>
-                            </div>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </empan>
-                            </div>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Fricassée d'escargots</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <span>25€</span>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </empan>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <div>
-                    <a class="bouton textinbutton">Commander</a>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div class="orderfooter">
-                <div class="footerline">
-                    <i class="iconefooter fa-solid fa-utensils"></i>
-                    <p>Proposer un restaurant</p>
-                </div>
-                <div class="footerline">
-                    <i class="iconefooter fa-solid fa-handshake-angle"></i>
-                    <p>Devenir partenaire</p>
-                </div>
-                <div class="footerline">
-                    <p>Mentions légales</p>
-                </div>
-                <div class="footerline">
-                    <p>Contact</p>
-                </div>
-                <div class="footerline">
-                    <h3 class="omf">ohmyfood</h3>
                 </div>
             </div>
-        </footer>
-    </body>
+            <div>
+                <h2 class="titre">PLATS</h2>
+                <div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Coquilles Saint-Jacques</h3>
+                            <p class="soustitre">Accompagnées d'une purée de panais</p>
+                        </article>
+                        <span class="prix">40€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                        </div>
+                    </div>
+                </div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Magret de canard</h3>
+                        <p class="soustitre">Et parmentier de pommes de terre</p>
+                    </article>
+                    <span class="prix">35€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+                <div class="minicadre">
+                    <article class="description">
+                        <h3 class="titremenu">Pigeonneau d'Ille-et-Vilaine</h3>
+                        <p class="soustitre">Sur son lit de gnocchis aux légumes</p>
+                    </article>
+                    <span class="prix">44€</span>
+                    <div class="carte__plats__infos__checkbox">
+                        <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                        <span class="checkbox_icon">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <h2 class="titre">DESSERTS</h2>
+            <div>
+                <div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Pétales de violettes glacées</h3>
+                            <p class="soustitre">Et purée de noisettes</p>
+                        </article>
+                        <span class="prix">18€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                        </div>
+                    </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Fondant au chocolat</h3>
+                            <p class="soustitre">Revisité</p>
+                        </article>
+                        <span class="prix">22€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                        </div>
+                    </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Millefeuille croustillant</h3>
+                            <p class="soustitre">Myrtilles er pâte d'amande</p>
+                        </article>
+                        <span class="prix">23€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name=" plat-entrées" value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <a class="bouton textinbutton">Commander</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="orderfooter">
+            <div class="footerline">
+                <i class="iconefooter fa-solid fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerline">
+                <i class="iconefooter fa-solid fa-handshake-angle"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <div class="footerline">
+                <p>Mentions légales</p>
+            </div>
+            <div class="footerline">
+                <p>Contact</p>
+            </div>
+            <div class="footerline">
+                <h3 class="omf">ohmyfood</h3>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
