--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -2,7 +2,12 @@
 <html>
 <head>
    <title>La palette du goût</title>
-   <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+   <link rel="stylesheet" type="text/css" href="../assets/stylesgiant.css">
+   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+   <link
+       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+       rel="stylesheet">
+   <script src="https://kit.fontawesome.com/96c58dc3c8.js" crossorigin="anonymous"></script>
 </head>
     <body>
         <header>
