Paramètre de police

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <h2 class="reservez">Réservez le menu qui vous convient</h2>
         <p class="decouvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <button class="bouton1"> Explorer nos restaurants </button>
+        <button class="bouton1" href="#Grandcadreresto"> <a>Explorer nos restaurants</a> </button>
 
         <section class="cadrefonction">
             <div>
@@ -67,7 +67,7 @@
                 </div>
             </article>
         </section>
-        <section class="Grandcadreresto">
+        <section class="Grandcadreresto" id="#Grandcadreresto">
             <div>
                 <h2 class="Restaurants">Restaurants</h2>
             </div>
@@ -120,7 +120,8 @@
 
 
                 <a class="cadreresto" href="restaurants/ledelicedessens.html">
-                    <img class="image" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                    <img class="image"
+                        src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                     <article class="descripton">
                         <h3 class="titre">Le délice des sens</h3>
                         <p class="soustitre">Folie-Méricourt</p>
@@ -152,7 +153,7 @@
             <div class="footerline">
                 <p>Contact</p>
             </div>
-            <div class="footerline">
+            <div class="footersuperline">
                 <h3 class="omf">ohmyfood</h3>
             </div>
         </div>
