--- a/restaurants/alafrançaise.html
+++ b/restaurants/alafrançaise.html
@@ -191,7 +191,7 @@
             <div class="footerline">
                 <p>Contact</p>
             </div>
-            <div class="footerline">
+            <div class="footersuperline">
                 <h3 class="omf">ohmyfood</h3>
             </div>
         </div>
