--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -206,7 +206,7 @@
                 <div class="footerline">
                     <p>Contact</p>
                 </div>
-                <div class="footerline">
+                <div class="footersuperline">
                     <h3 class="omf">ohmyfood</h3>
                 </div>
             </div>
