--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -186,7 +186,7 @@
             <div class="footerline">
                 <p>Contact</p>
             </div>
-            <div class="footerline">
+            <div class="footersuperline">
                 <h3 class="omf">ohmyfood</h3>
             </div>
         </div>
