--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -192,7 +192,7 @@
                 <div class="footerline">
                     <p>Contact</p>
                 </div>
-                <div class="footerline">
+                <div class="footersuperline">
                     <h3 class="omf">ohmyfood</h3>
                 </div>
             </div>
